# my-awesome-project-template

./: .editorconfig  .gitattributes  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build-and-publish.yml  coverage-report.yml  dependency-check.yml  lint.yaml  lint.yml  pre-commit-check.yml  test-matrix.yml
docs/: COMMON_COMMANDS.md  CONVENTIONAL_COMMITS.md  GITHUB_LABELS.md  GITHUB_TAGS_RELEASES.md  IDE_SUPPORT.md  MAINTENANCE.md  SETUP_GUIDE.md
scripts/: create-labels.sh  new-project.sh
src/my_awesome_project_template/: __init__.py  main.py  py.typed
tests/: test_main.py
